--- a/src/pages/token.css
+++ b/src/pages/token.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 768px) {
   .tokenbg {
-    background-image: url(../img/others/tree-bg.webp);
+    background-image: url(../img/others/tree-bg.jpg);
     animation: medium 20s infinite;
     -webkit-animation: medium 20s infinite;
     background-position: center center;
@@ -10,16 +10,12 @@
     mix-blend-mode: overlay;
     width: 100%;
     height: 100%;
-    background-attachment: fixed;
-    -o-background-size: cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
   }
 }
 
 @media only screen and (min-width: 1024px) {
   .tokenbg {
-    background-image: url(../img/others/tree-bg.webp);
+    background-image: url(../img/others/tree-bg.jpg);
     animation: large 20s infinite;
     -webkit-animation: large 20s infinite;
     background-position: center center;
@@ -29,51 +25,29 @@
     mix-blend-mode: overlay;
     width: 100%;
     height: 100%;
-    background-attachment: fixed;
-    -o-background-size: cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
   }
 }
 
 @keyframes large {
   0% {
     background-size: 100%;
-    -o-background-size: 100%;
-    -moz-background-size: 100%;
-    -webkit-background-size: 100%;
   }
   50% {
     background-size: 125%;
-    -o-background-size: 125%;
-    -moz-background-size: 125%;
-    -webkit-background-size: 125%;
   }
   100% {
     background-size: 100%;
-    -o-background-size: 100%;
-    -moz-background-size: 100%;
-    -webkit-background-size: 100%;
   }
 }
 
 @keyframes medium {
   0% {
     background-size: 125%;
-    -o-background-size: 125%;
-    -moz-background-size: 125%;
-    -webkit-background-size: 125%;
   }
   50% {
-    background-size:150%;
-    -o-background-size:150%;
-    -moz-background-size:150%;
-    -webkit-background-size:150%;
+    background-size: 150%;
   }
   100% {
     background-size: 125%;
-    -o-background-size: 125%;
-    -moz-background-size: 125%;
-    -webkit-background-size: 125%;
   }
 }
