--- a/src/pages/token.css
+++ b/src/pages/token.css
@@ -10,6 +10,7 @@
     mix-blend-mode: overlay;
     width: 100%;
     height: 100%;
+    background-attachment: fixed;
   }
 }
 
@@ -25,29 +26,50 @@
     mix-blend-mode: overlay;
     width: 100%;
     height: 100%;
+    background-attachment: fixed;
+    
   }
 }
 
 @keyframes large {
   0% {
     background-size: 100%;
+    -o-background-size: 100%;
+    -moz-background-size: 100%;
+    -webkit-background-size: 100%;
+    
   }
   50% {
     background-size: 125%;
+    -o-background-size: 125%;
+    -moz-background-size: 125%;
+    -webkit-background-size: 125%;
   }
   100% {
     background-size: 100%;
+    -o-background-size: 100%;
+    -moz-background-size: 100%;
+    -webkit-background-size: 100%;
   }
 }
 
 @keyframes medium {
   0% {
     background-size: 125%;
+    -o-background-size: 125%;
+    -moz-background-size: 125%;
+    -webkit-background-size: 125%;
   }
   50% {
     background-size: 150%;
+    -o-background-size: 150%;
+    -moz-background-size: 150%;
+    -webkit-background-size: 150%;
   }
   100% {
     background-size: 125%;
+    -o-background-size: 125%;
+    -moz-background-size: 125%;
+    -webkit-background-size: 125%;
   }
 }
